<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright 2018 Jonathan Merritt 11R00TT00R11@GMAIL.COM
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <Button
        android:id="@+id/openString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_string"
        app:layout_constraintBottom_toTopOf="@+id/openBytes"
        app:layout_constraintEnd_toStartOf="@+id/openStringPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openStringPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_string_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openString"
        app:layout_constraintTop_toTopOf="@+id/openString"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openBytes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_bytes"
        app:layout_constraintBottom_toTopOf="@+id/openSave"
        app:layout_constraintEnd_toStartOf="@+id/openBytesPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openString"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openBytesPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_bytes_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openBytes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openBytes"
        app:layout_constraintTop_toTopOf="@+id/openBytes"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_save"
        app:layout_constraintBottom_toTopOf="@+id/openBitmap"
        app:layout_constraintEnd_toStartOf="@+id/openSavePair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openBytes"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openSavePair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_save_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openSave"
        app:layout_constraintTop_toTopOf="@+id/openSave"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openBitmap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_bitmap"
        app:layout_constraintBottom_toTopOf="@+id/listAll"
        app:layout_constraintEnd_toStartOf="@+id/openBitmapPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openSave"
        style="@style/Button"
        />

    <Button
        android:id="@+id/openBitmapPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_bitmap_pair"
        app:layout_constraintBottom_toBottomOf="@+id/openBitmap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/openBitmap"
        app:layout_constraintTop_toTopOf="@+id/openBitmap"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_all"
        app:layout_constraintBottom_toTopOf="@+id/listOpen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openBitmap"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open"
        app:layout_constraintBottom_toTopOf="@+id/listOpenString"
        app:layout_constraintEnd_toStartOf="@+id/listOpenPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAll"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpen"
        app:layout_constraintTop_toTopOf="@+id/listOpen"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_string"
        app:layout_constraintBottom_toTopOf="@+id/listOpenBytes"
        app:layout_constraintEnd_toStartOf="@+id/listOpenStringPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpen"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenStringPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_string_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenString"
        app:layout_constraintTop_toTopOf="@+id/listOpenString"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenBytes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_bytes"
        app:layout_constraintBottom_toTopOf="@+id/listOpenSave"
        app:layout_constraintEnd_toStartOf="@+id/listOpenBytesPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenString"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenBytesPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_bytes_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenBytes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenBytes"
        app:layout_constraintTop_toTopOf="@+id/listOpenBytes"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_save"
        app:layout_constraintBottom_toTopOf="@+id/listOpenBitmap"
        app:layout_constraintEnd_toStartOf="@+id/listOpenSavePair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenBytes"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenSavePair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_save_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenSave"
        app:layout_constraintTop_toTopOf="@+id/listOpenSave"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenBitmap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_bitmap"
        app:layout_constraintBottom_toTopOf="@+id/listOpenFd"
        app:layout_constraintEnd_toStartOf="@+id/listOpenBitmapPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenSave"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenBitmapPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_bitmap_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenBitmap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenBitmap"
        app:layout_constraintTop_toTopOf="@+id/listOpenBitmap"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenFd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_fd"
        app:layout_constraintBottom_toTopOf="@+id/listOpenNonAssetFd"
        app:layout_constraintEnd_toStartOf="@+id/listOpenFdPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenBitmap"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenFdPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_fd_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenFd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenFd"
        app:layout_constraintTop_toTopOf="@+id/listOpenFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenNonAssetFd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_non_asset_fd"
        app:layout_constraintBottom_toTopOf="@+id/listOpenXmlResourceParser"
        app:layout_constraintEnd_toStartOf="@+id/listOpenNonAssetFdPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenNonAssetFdPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_non_asset_fd_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenNonAssetFd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenNonAssetFd"
        app:layout_constraintTop_toTopOf="@+id/listOpenNonAssetFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenXmlResourceParser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_xml_resource_parser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listOpenXmlResourceParserPair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOpenNonAssetFd"
        style="@style/Button"
        />

    <Button
        android:id="@+id/listOpenXmlResourceParserPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_open_xml_resource_parser_pair"
        app:layout_constraintBottom_toBottomOf="@+id/listOpenXmlResourceParser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listOpenXmlResourceParser"
        app:layout_constraintTop_toTopOf="@+id/listOpenXmlResourceParser"
        style="@style/Button"
        />
  </android.support.constraint.ConstraintLayout>
</ScrollView>